# sphynx-tutorial

./: .gitignore  helloworld.py  pyproject.toml
docs/: readthedocs.yaml  requirements.txt
docs/source/: conf.py  index.md  index.rst  usage.md
docs/source/notebooks/: tutorial.ipynb
